--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,19 +38,19 @@ header a {
   grid-template-columns: 3fr 1fr;
   gap: 100px;
 }
-.workout-details {
+/* .workout-details {
   background: #fff;
   border-radius: 4px;
   margin: 20px auto;
   padding: 20px;
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
-}
-.workout-details h4 {
+} */
+/* .workout-details h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
   color: var(--primary);
-}
+} */
 .workout-details p {
   margin: 0;
   font-size: 0.9em;
@@ -243,4 +243,16 @@ table {
 .table-hover tbody tr:hover {
   color: #858796;
   background-color: rgba(0, 0, 0, 0.075);
+}
+.grades-table {
+  width: 80%;
+  margin: auto;
+  border-collapse: collapse;
+  border: 1px solid #ffff;
+}
+
+.grades-table th, .grades-table td {
+  padding: 10px;
+  text-align: center;
+  border: 4px solid #1aac83;
 }
