--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,256 +3,157 @@
 
 /* layout */
 :root {
-  --primary: #1aac83;
-  --error: #e7195a;
+   --primary: #1aac83;
+   --error: #e7195a;
 }
+
 body {
-  background: #f1f1f1;
-  margin: 0;
-  font-family: "Poppins";
+   background: #f1f1f1;
+   margin: 0;
+   font-family: "Poppins";
 }
+
 header {
-  background: #fff;
+   background: #fff;
 }
+
 header .container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+   max-width: 1400px;
+   margin: 0 auto;
+   padding: 10px 20px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
 }
+
 header a {
-  color: #333;
-  text-decoration: none;
+   color: #333;
+   text-decoration: none;
 }
-.pages{
-  max-width: 1400px;
-  padding: 20px;
-  margin: 0 auto;
+
+.pages {
+   max-width: 1400px;
+   padding: 20px;
+   margin: 0 auto;
 }
 
 /* homepage */
 .home {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  gap: 100px;
+   display: grid;
+   grid-template-columns: 3fr 1fr;
+   gap: 100px;
 }
-/* .workout-details {
-  background: #fff;
-  border-radius: 4px;
-  margin: 20px auto;
-  padding: 20px;
-  position: relative;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
-} */
-/* .workout-details h4 {
-  margin: 0 0 10px 0;
-  font-size: 1.2em;
-  color: var(--primary);
-} */
-.workout-details p {
-  margin: 0;
-  font-size: 0.9em;
-  color: #555;
+
+.subject-details {
+   background: #fff;
+   border-radius: 4px;
+   margin: 20px auto;
+   padding: 20px;
+   position: relative;
+   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
 }
-.workout-details span {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
-  background: #f1f1f1;
-  padding: 6px;
-  border-radius: 50%;
-  color: #333;
+
+.subject-details h4 {
+   margin: 0 0 10px 0;
+   font-size: 1.2em;
+   color: var(--primary);
+}
+
+.subject-details p {
+   margin: 0;
+   font-size: 0.9em;
+   color: #555;
+}
+
+.subject-details span {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   cursor: pointer;
+   background: #f1f1f1;
+   padding: 6px;
+   border-radius: 50%;
+   color: #333;
 }
 
 /* new workout form */
-label, input {
-  display: block;
-}
+label,
 input {
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  width: 100%;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-sizing: border-box;
+   display: block;
 }
-form button {
-  background: var(--primary);
-  border: 0;
-  color: #fff;
-  padding: 10px;
-  font-family: "Poppins";
-  border-radius: 4px;
-  cursor: pointer;
+
+input {
+   padding: 10px;
+   margin-top: 10px;
+   margin-bottom: 20px;
+   width: 100%;
+   border: 1px solid #ddd;
+   border-radius: 4px;
+   box-sizing: border-box;
 }
+
+.form_button {
+   background: var(--primary);
+   border: 0;
+   color: #fff;
+   padding: 10px;
+   font-family: "Poppins";
+   border-radius: 4px;
+   cursor: pointer;
+}
+
 div.error {
-  padding: 10px;
-  background: #ffefef;
-  border: 1px solid var(--error);
-  color: var(--error);
-  border-radius: 4px;
-  margin: 20px 0;
+   padding: 10px;
+   background: #ffefef;
+   border: 1px solid var(--error);
+   color: var(--error);
+   border-radius: 4px;
+   margin: 20px 0;
 }
+
 input.error {
-  border: 1px solid var(--error);
+   border: 1px solid var(--error);
 }
 
 /* navbar */
-nav {
-  display: flex;
-  align-items: center;
+Nav {
+   display: flex;
+   align-items: center;
 }
-nav a {
-  margin-left: 10px;
+
+Nav a {
+   margin-left: 10px;
 }
-nav button {
-  background: #fff;
-  color: var(--primary);
-  border: 2px solid var(--primary);
-  padding: 6px 10px;
-  border-radius: 4px;
-  font-family: "Poppins";
-  cursor: pointer;
-  font-size: 1em;
+
+Nav button {
+   background: #fff;
+   color: var(--primary);
+   border: 2px solid var(--primary);
+   padding: 6px 10px;
+   border-radius: 4px;
+   font-family: "Poppins";
+   cursor: pointer;
+   font-size: 1em;
+   margin-left: 10px;
 }
 
 /* auth forms */
-form.signup, form.login {
-  max-width: 400px;
-  margin: 40px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 4px;
+form.signup,
+form.login {
+   max-width: 400px;
+   margin: 40px auto;
+   padding: 20px;
+   background: #fff;
+   border-radius: 4px;
 }
 
-
-.card > .card-header + .list-group,
-.card > .list-group + .card-footer {
-  border-top: 0;
-}
-.card-header {
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 0;
-  background-color: #f8f9fc;
-  border-bottom: 1px solid #e3e6f0;
-}
-.card-header:first-child {
-  border-radius: calc(0.35rem - 1px) calc(0.35rem - 1px) 0 0;
-}
-.card-header-tabs {
-  margin-right: -0.625rem;
-  margin-bottom: -0.75rem;
-  margin-left: -0.625rem;
-  border-bottom: 0;
-}
-.card-header-pills {
-  margin-right: -0.625rem;
-  margin-left: -0.625rem;
-}
-.card-group > .card:not(:last-child) .card-header,
-.card-group > .card:not(:last-child) .card-img-top {
-  border-top-right-radius: 0;
-}
-.card-group > .card:not(:first-child) .card-header,
-.card-group > .card:not(:first-child) .card-img-top {
-  border-top-left-radius: 0;
-}
-.accordion > .card > .card-header {
-  border-radius: 0;
-  margin-bottom: -1px;
-}
-.card-body {
-  flex: 1 1 auto;
-  min-height: 1px;
-  padding: 1.25rem;
-}
-.table-bordered td,
-.table-bordered th {
-  border: 1px solid #dddfeb !important;
-}
-.table-bordered {
-  border: 1px solid #e3e6f0;
-}
-.table-bordered td,
-.table-bordered th {
-  border: 1px solid #e3e6f0;
-}
-.table-bordered thead td,
-.table-bordered thead th {
-  border-bottom-width: 2px;
-}
-.table-dark.table-bordered {
-  border: 0;
-}
-.table-responsive > .table-bordered {
-  border: 0;
-}
-.table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #e3e6f0;
-}
-table {
-  border-collapse: collapse;
-}
-.table {
-  width: 100%;
-  margin-bottom: 1rem;
-  color: #858796;
-}
-.table td,
-.table th {
-  padding: 0.75rem;
-  vertical-align: top;
-  border-top: 1px solid #e3e6f0;
-}
-.table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #e3e6f0;
-}
-.table tbody + tbody {
-  border-top: 2px solid #e3e6f0;
-}
-.table-sm td,
-.table-sm th {
-  padding: 0.3rem;
-}
-.table-bordered {
-  border: 1px solid #e3e6f0;
-}
-.table-bordered td,
-.table-bordered th {
-  border: 1px solid #e3e6f0;
-}
-.table-bordered thead td,
-.table-bordered thead th {
-  border-bottom-width: 2px;
-}
-.table-borderless tbody + tbody,
-.table-borderless td,
-.table-borderless th,
-.table-borderless thead th {
-  border: 0;
-}
-.table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-.table-hover tbody tr:hover {
-  color: #858796;
-  background-color: rgba(0, 0, 0, 0.075);
-}
-.grades-table {
-  width: 80%;
-  margin: auto;
-  border-collapse: collapse;
-  border: 1px solid #ffff;
-}
-
-.grades-table th, .grades-table td {
-  padding: 10px;
-  text-align: center;
-  border: 4px solid #1aac83;
+.button{
+   background: var(--primary);
+   border: 0;
+   color: #fff;
+   padding: 10px;
+   font-family: "Poppins";
+   border-radius: 4px;
+   cursor: pointer;
+   width: 122px;
 }
