--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -200,7 +200,7 @@ table {
    font-family: "Poppins";
    border-radius: 4px;
    cursor: pointer;
-   width: 80px;
+   width: 75px;
  }
  .form_button_save{
    background: var(--primary);
@@ -210,7 +210,19 @@ table {
    font-family: "Poppins";
    border-radius: 4px;
    cursor: pointer;
-   width: 80px;
+   width: 78px;
    margin-right: 5px;
 
+ }
+ .edit-popup {
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   background-color: white;
+   padding: 20px;
+   border-radius: 8px;
+   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+   z-index: 1000; 
+   width: 20%;
  }
